--- a/estudo/dice_roller/style.css
+++ b/estudo/dice_roller/style.css
@@ -1,15 +1,19 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(230, 230, 230);
 }
 
 main{
+    text-align: center;
     padding: 1em;
     margin: auto;
     max-width: 600px;
 }
 
 main > h1{
+    font-size: 2.2em;
     text-align: center;
+
 }
 
 .input{
@@ -21,11 +25,14 @@ main > h1{
 }
 
 .input > label{
+    font-size: 1.2em;
     font-weight: bold;
 }
 
 .input > input[type="number"]{
     width: 120px;
+    border: 1px solid black;
+    text-align: center;
 }
 
 #submit{
@@ -34,8 +41,20 @@ main > h1{
     border-radius: 0.5em;
     color: white;
     padding: 0.3em;
+    font-weight: bold;
 }
 
 #submit:hover{
     cursor: pointer;
+}
+
+#resultaDoDado{
+  text-align: center;
+}
+
+
+#dadoImg > img{
+    width: 6em;
+    height: 6em;
+    margin:10px;
 }
